# Cmake-Tutorial

./: README.md
Step1/: README.md
Step1/Exercise1/: CMakeLists.txt  README.md
Step1/Exercise1/Step1_build/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  exercise_1.sln  exercise_1.vcxproj  exercise_1.vcxproj.filters
Step1/Exercise1/Step1_build/exercise_1.dir/Debug/: exercise_1.exe.recipe  exercise_1.ilk
Step1/Exercise1/Step1_build/exercise_1.dir/Debug/exercise_1.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Step1/Exercise1/Step1_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Step1/Exercise1/Step1_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Step1/Exercise2/: CMakeLists.txt
Step1/Exercise2/src/: main.cpp
Step1/Exercise3/: CMakeLists.txt  TutorialConfig.h.in
Step1/Exercise3/src/: main.cpp
Step1/Step1_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  exercise_1.sln  exercise_1.vcxproj  exercise_1.vcxproj.filters
Step1/Step1_build/exercise_1.dir/Debug/: exercise_1.exe.recipe  exercise_1.ilk
Step1/Step1_build/exercise_1.dir/Debug/exercise_1.tlog/: CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Step1/Step1_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Step1/Step1_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+13 files in other folders)
